styles/mcgowan.less
@import "elements.less";
@import "variables.less";

// Colors

/*body {
	font-size: @fontNormal;
	font-family: @fontFamily;
	background: lighten(@darkGrey,10%);
	padding: 0px;
	margin: 0px;
	> nav, > header, > section, > footer {
		width: 100%;
		display: block;
		
		> div {
			padding: @gridMinor;
			margin: 0px auto;
			width: 960px;
		}
	}
	> nav > div{
		height: @gridMinor;
		background: @darkGrey;
	}
	> header {
		height: @gridMajor * 5;
		
		>div {
			background: @background;
		}
		h1 {
			font-size: @fontHuge; 
		}
		.cap {
			height: @gridMajor * 3;
			width: @gridMajor * 3;
			background: @darkGrey;
			position: relative;
			overflow: hidden;
			border-radius: 10px;
			float: left;
			&:after {
				content: "A";
				position: absolute;
				display: block;
				color: @background;
				font-size: 168px;
				top: -38px;
				left: 4px;
				font-family: @fontBold;
				
			}
		}
	}
	> section {
		color: @background;
		&.primary > div {
			background: @mcPrimary;
		}
		&.secondaryA > div {
			background: @mcSecondaryA;
		}
		&.secondaryB > div {
			background: @mcSecondaryB;
		}
		&.complimentary > div {
			background: @mcComplimentary;
		}
	}
	> footer > div {
		background: @darkGrey;
	}
}*/
body {
	overflow-x: hidden;
}
// Techno logos 
.techno-logos {
	width: 160px;
	display: block;
	position: relative;
	left: 50%;
	margin-left: -80px;
	margin-top: 20px;
	.logo {
		width: 75px;
		height: 75px;
		padding: 5px;
	}
}
// Rubrix Logo
.logo {
	text-align: center;
}
.rubrix-logo {
	font-family: @fontOpen;
	position: relative;
	width: 125px;
	height: 145px;
	padding-top: 12px;
	padding-left: 20px;
	left: 50%;
	margin-top: 40px;
	margin-left: -62px;
	.square {
		width: 80px;
		height: 80px;
		display: block;
		background: @darkGrey;
		.rotation(45deg);
		.rounded(14px);
		overflow: hidden;
		position: absolute;
		.r {
			color: #fff;
			top: -55px;
			left: 14px;
			.rotation(-45deg);
			position: absolute;
			font-size: 10em;
			font-weight: bold;
		}
	}
	.circle {
		background: @mediumGrey;
		width: 30px;
		height: 30px;
		.rounded(30px);
		border: 3px solid #fff;
		position: absolute;
		top: 36px;
		left: 0px;
	}
	.rubrix {
		font-weight: bold;
		font-size: 2.5em;
		position: absolute;
		top: 102px;
		left: 8px;
		letter-spacing: -2px;
		&:after {
			content: "TM";
			position: absolute;
			left: 99px;
			font-size: 0.25em;
			letter-spacing: 0px;
			top: 15.5px;
			color: @mediumGrey;
			
		}
	}
	.rubrix-i {
		width: 7px;
		height: 7px;
		.rounded(7px);
		position:absolute;
		background: @mediumGrey;
		top: 113px;
		left: 79px;
		display: block;
		z-index: 2;
		border: 1px solid white;
	}
}


// Bootstrap stusff
.navbar-fixed-top + .jumbotron {
	margin-top: 50px;
}
.technologies {
	text-align: center;
	i {
		font-size: 30px;
	}
	.displays {
		position: relative;
		left: 50%;
		height: 33px;
		.center {
			width: 84px;
			display: block;
			position: absolute;
			left: -42px;
		}
		i {
			position: absolute;
			&.icon-desktop {
				font-size: 36px;
				left: 3px;
				top: 0px;
			}
			&.icon-mobile-phone {
				font-size: 38px;
				left: 27px;
				top: 5px;
				&:after {
					content: " ";
					display: block;
					background: white;
					width: 12px;
					height: 16px;
					top: 11px;
					left: 2px;
					position: absolute;
				}
			}
			&.icon-laptop {
				left: 35px;
				top: 1px;
				font-size: 40px;
			}
		}
	}
}
.carousel {
	div.item {
		height: 400px;
		background: @darkGrey;
	}
}
.thumbnail {
	margin-bottom: 30px;
}

#recent-work {
	background: silver;
}
article.row {
	@duration: 0.5s;
	position: relative;
	.transitionMultiple(@duration ease-in max-height @duration * 2.2,
						0 ease-out width @duration,
						@duration ease-out opacity @duration * 3,
						@duration ease-out left @duration * 3;);
	max-height: 1700px;
	width: 100%;
	overflow: hidden;
	> div {
		float: left;
	}
	&.slide-left {
		left: -100%;
		opacity: 0;
		max-height: 0px;
		//width: 0px;
		.transitionMultiple(@duration ease-in opacity 0s,
							@duration ease-in left 0s, 
							@duration ease-out max-height @duration,
							0s ease-in width @duration;);
	}
	&.slide-right {
		left: 100%;
		opacity: 0;
		max-height: 0px;
		//width: 0px;
		.transitionMultiple(@duration ease-in opacity 0s,
							@duration ease-in left 0s, 
							@duration ease-out max-height @duration,
							0s ease-in width @duration;);
	}
}

